appId: pawel.zak.findmypasttask
---
- tapOn: "Insert user id"
- inputText: ${USER_ID}
- tapOn: "Submit"